<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="advanced_settings">ZenParts</string>
    <string name="advanced_settings_summary">Device Specific Customizations</string>

    <string name="display_title">Display</string>

    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>
    <string name="torch_title">Torch</string>
    <string name="torch_brightness_title">Brightness</string>
    <string name="vibration_title">Vibration</string>
    <string name="vibration_summary">Set vibration strength for system, calls and notification</string>
    <string name="vibration_strength_system_ui">Vibration Strength - System UI</string>
    <string name="vibration_strength_call">Vibration Strength - Call</string>
    <string name="vibration_strength_system_notification">Vibration Strength - Notification</string>
    <string name="category_vibration">Vibration Strength</string>

    <string name="audio_title">Audio</string>

    <!-- Audio amplification -->
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>

    <!-- Kcal Settings -->
    <string name="device_kcal_title">Display Color Calibration</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>
    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>

    <!-- Menu -->
    <string name="kcal_presets" translatable="false">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Zenmotions -->
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>

    <string name="category_gesture">Gestures</string>
    <string name="screen_off_gesture_title">Zenmotions</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="gestures_dashboard_summary">Awesome screen-off gestures</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="zenmotions">Zenmotions</string>
    <string name="zenmotions_summary">Awesome screen off gestures</string>
    <string name="gestures">Gestures</string>
    <string name="screen_off_gestures">Screen-off gestures</string>
    <string name="gesture_double_tap_title">Gesture Double Tap</string>
    <string name="gesture_z_title">Gesture Z</string>
    <string name="gesture_s_title">Gesture S</string>
    <string name="gesture_v_title">Gesture V</string>
    <string name="gesture_w_title">Gesture W</string>
    <string name="gesture_c_title">Gesture C</string>
    <string name="gesture_e_title">Gesture e</string>
    <string name="gesture_up_title">Gesture Swipe Up</string>
    <string name="gesture_down_title">Gesture Swipe Down</string>
    <string name="gesture_left_title">Gesture Swipe Left</string>
    <string name="gesture_right_title">Gesture Swipe Right</string>
    <string name="screen_gestures_panel_title">Gestures</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gesture and fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_off">Off</string>

    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced settings</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>

    <!-- Gesture Settings -->

    <!-- Arrays for Screen off gestures -->
    <string-array name="shortcut_action_screen_off_entries">
        <item>@string/shortcut_action_app</item>
        <item>@string/shortcut_action_camera</item>
        <item>@string/shortcut_action_media_next</item>
        <item>@string/shortcut_action_media_play_pause</item>
        <item>@string/shortcut_action_media_previous</item>
        <item>@string/shortcut_action_ring_silent</item>
        <item>@string/shortcut_action_ring_vib</item>
        <item>@string/shortcut_action_ring_vib_silent</item>
        <item>@string/shortcut_action_torch</item>
        <item>@string/shortcut_action_wake_device</item>
        <item>@string/shortcut_action_none</item>
    </string-array>

    <string-array name="shortcut_action_screen_off_values" translatable="false">
        <item>**app**</item>
        <item>**camera**</item>
        <item>**media_next**</item>
        <item>**media_play_pause**</item>
        <item>**media_previous**</item>
        <item>**ring_silent**</item>
        <item>**ring_vib**</item>
        <item>**ring_vib_silent**</item>
        <item>**torch**</item>
        <item>**wake_device**</item>
        <item>**null**</item>
    </string-array>

    <!-- Shortcut actions -->
    <string name="shortcut_action_none">None</string>
    <string name="shortcut_action_app">Custom app</string>
    <string name="shortcut_action_home">Home</string>
    <string name="shortcut_action_back">Back</string>
    <string name="shortcut_action_menu">Menu</string>
    <string name="shortcut_action_ime">Open IME Switcher</string>
    <string name="shortcut_action_power_menu">Power menu</string>
    <string name="shortcut_action_recent">Recents</string>
    <string name="shortcut_action_power">Screen Off</string>
    <string name="shortcut_action_search">Search in app</string>
    <string name="shortcut_action_now_on_tap">Now on Tap</string>
    <string name="shortcut_action_ring_vib">Ring/Vib</string>
    <string name="shortcut_action_ring_silent">Ring/Silent</string>
    <string name="shortcut_action_ring_vib_silent">Ring/Vib/Silent</string>
    <string name="shortcut_action_camera">Camera</string>
    <string name="shortcut_action_media_next">Music - next track</string>
    <string name="shortcut_action_media_play_pause">Music - play/pause</string>
    <string name="shortcut_action_media_previous">Music - previous track</string>
    <string name="shortcut_action_wake_device">Wake up device</string>
    <string name="shortcut_action_kill">Kill app</string>
    <string name="shortcut_action_screenshot">Screenshot</string>
    <string name="shortcut_action_lastapp">Last app</string>
    <string name="shortcut_action_notifications">Notifications</string>
    <string name="shortcut_action_qs">Quicksettings panel</string>
    <string name="shortcut_action_torch">Flashlight</string>
    <string name="shortcut_action_longpress">Longpress:</string>
    <string name="shortcut_action_select_action_longpress">Choose longpress action:</string>
    <string name="shortcut_action_select_action">Choose action:</string>
    <string name="shortcut_action_select_action_newaction">Choose new action:</string>
    <string name="shortcut_action_reset">Reset</string>
    <string name="shortcut_action_add">Add</string>
    <string name="shortcut_action_reset_message">Reset all entries to default?</string>
    <string name="shortcut_action_max">Maximum entries size has been reached</string>
    <string name="shortcut_action_warning">Warning</string>
    <string name="shortcut_action_warning_message">It is not possible to delete last entry</string>
    <string name="shortcut_action_required_warning_message">It is not possible to delete required buttons</string>
    <string name="shortcut_action_disable_message">Disabled\nAdd an entry to enable this feature</string>
    <string name="shortcut_image_not_valid">The chosen app did not return a valid icon or does not support image cropping. Use another app.</string>
    <string name="shortcut_duplicate_entry">The chosen action cannot be added twice</string>
    <string name="shortcut_action_help_shortcut">shortcut</string>
    <string name="shortcut_action_help_button">button</string>
    <string name="shortcut_action_help_app">app</string>
    <string name="shortcut_action_help_icon">, while selecting the icon will bring up customization options</string>
    <string name="shortcut_action_help_main">To add a %1$s, select the Add icon. Once a %1$s is added, selecting the row will change the target%2$s\n\nTo remove a %1$s, swipe the row horizontally left or right. Re-order a %1$s in the list by vertically dragging the anchor on the left.\n\nTo clear or reset to defaults, select the reset option.</string>

    <!-- Device specific settings -->
    <string name="screen_off_gesture_settings_title">Screen off gestures</string>

</resources>
